BackEnd/src/Language/GolampiParser.php
<?php

/*
 * Generated from Golampi.g4 by ANTLR 4.13.1
 */

namespace App\Language {
	use Antlr\Antlr4\Runtime\Atn\ATN;
	use Antlr\Antlr4\Runtime\Atn\ATNDeserializer;
	use Antlr\Antlr4\Runtime\Atn\ParserATNSimulator;
	use Antlr\Antlr4\Runtime\Dfa\DFA;
	use Antlr\Antlr4\Runtime\Error\Exceptions\FailedPredicateException;
	use Antlr\Antlr4\Runtime\Error\Exceptions\NoViableAltException;
	use Antlr\Antlr4\Runtime\PredictionContexts\PredictionContextCache;
	use Antlr\Antlr4\Runtime\Error\Exceptions\RecognitionException;
	use Antlr\Antlr4\Runtime\RuleContext;
	use Antlr\Antlr4\Runtime\Token;
	use Antlr\Antlr4\Runtime\TokenStream;
	use Antlr\Antlr4\Runtime\Vocabulary;
	use Antlr\Antlr4\Runtime\VocabularyImpl;
	use Antlr\Antlr4\Runtime\RuntimeMetaData;
	use Antlr\Antlr4\Runtime\Parser;

	final class GolampiParser extends Parser
	{
		public const T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, 
               T__6 = 7, T__7 = 8, T__8 = 9, T__9 = 10, T__10 = 11, T__11 = 12, 
               T__12 = 13, TKINT = 14, TKFLOAT = 15, TKBOOL = 16, TKRUNE = 17, 
               TKSTRING = 18, IGUAL_IGUAL = 19, DIFERENTE = 20, MENOR_IGUAL = 21, 
               MAYOR_IGUAL = 22, MENOR = 23, MAYOR = 24, TKAND = 25, TKOR = 26, 
               TKVAR = 27, TKCONST = 28, IGUAL = 29, NIL = 30, DEC = 31, 
               INC = 32, MASIG = 33, MENOSIG = 34, PORIG = 35, DIVIG = 36, 
               TKMAIN = 37, TKFUNC = 38, TKPRINT = 39, TKLEN = 40, TKNOW = 41, 
               TKSUBSTR = 42, TYPEOF = 43, TKIF = 44, TKELSE = 45, TKSWITCH = 46, 
               TKCASE = 47, TKDEFAULT = 48, TKFOR = 49, TKBREAK = 50, TKCONTINUE = 51, 
               TKRETURN = 52, BOOL = 53, STRING = 54, UNICODE = 55, IDNAME = 56, 
               INT = 57, FLOAT = 58, COMENT = 59, MULTILINE_COMMENT = 60, 
               WS = 61;

		public const RULE_inicio = 0, RULE_instrucciones = 1, RULE_instruccion = 2, 
               RULE_bloque = 3, RULE_listids = 4, RULE_listaexp = 5, RULE_declaracion = 6, 
               RULE_asignacion = 7, RULE_asig_compuesta = 8, RULE_inc_dec = 9, 
               RULE_si_stmt = 10, RULE_imprimir = 11, RULE_switch = 12, 
               RULE_case = 13, RULE_default = 14, RULE_init = 15, RULE_post = 16, 
               RULE_for = 17, RULE_break = 18, RULE_continue = 19, RULE_expresion = 20, 
               RULE_optipo = 21;

		/**
		 * @var array<string>
		 */
		public const RULE_NAMES = [
			'inicio', 'instrucciones', 'instruccion', 'bloque', 'listids', 'listaexp', 
			'declaracion', 'asignacion', 'asig_compuesta', 'inc_dec', 'si_stmt', 
			'imprimir', 'switch', 'case', 'default', 'init', 'post', 'for', 'break', 
			'continue', 'expresion', 'optipo'
		];

		/**
		 * @var array<string|null>
		 */
		private const LITERAL_NAMES = [
		    null, "'{'", "'}'", "','", "'('", "')'", "':'", "';'", "'-'", "'!'", 
		    "'*'", "'/'", "'%'", "'+'", "'int32'", "'float32'", "'bool'", "'rune'", 
		    "'string'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "'&&'", 
		    "'||'", "'var'", "'const'", "'='", "'nil'", "'--'", "'++'", "'+='", 
		    "'-='", "'*='", "'/='", "'main'", "'func'", "'fmt.Print'", "'len'", 
		    "'now'", "'substr'", "'typeof'", "'if'", "'else'", "'switch'", "'case'", 
		    "'default'", "'for'", "'break'", "'continue'", "'return'"
		];

		/**
		 * @var array<string>
		 */
		private const SYMBOLIC_NAMES = [
		    null, null, null, null, null, null, null, null, null, null, null, 
		    null, null, null, "TKINT", "TKFLOAT", "TKBOOL", "TKRUNE", "TKSTRING", 
		    "IGUAL_IGUAL", "DIFERENTE", "MENOR_IGUAL", "MAYOR_IGUAL", "MENOR", 
		    "MAYOR", "TKAND", "TKOR", "TKVAR", "TKCONST", "IGUAL", "NIL", "DEC", 
		    "INC", "MASIG", "MENOSIG", "PORIG", "DIVIG", "TKMAIN", "TKFUNC", "TKPRINT", 
		    "TKLEN", "TKNOW", "TKSUBSTR", "TYPEOF", "TKIF", "TKELSE", "TKSWITCH", 
		    "TKCASE", "TKDEFAULT", "TKFOR", "TKBREAK", "TKCONTINUE", "TKRETURN", 
		    "BOOL", "STRING", "UNICODE", "IDNAME", "INT", "FLOAT", "COMENT", "MULTILINE_COMMENT", 
		    "WS"
		];

		private const SERIALIZED_ATN =
			[4, 1, 61, 240, 2, 0, 7, 0, 2, 1, 7, 1, 2, 2, 7, 2, 2, 3, 7, 3, 2, 4, 
		    7, 4, 2, 5, 7, 5, 2, 6, 7, 6, 2, 7, 7, 7, 2, 8, 7, 8, 2, 9, 7, 9, 
		    2, 10, 7, 10, 2, 11, 7, 11, 2, 12, 7, 12, 2, 13, 7, 13, 2, 14, 7, 
		    14, 2, 15, 7, 15, 2, 16, 7, 16, 2, 17, 7, 17, 2, 18, 7, 18, 2, 19, 
		    7, 19, 2, 20, 7, 20, 2, 21, 7, 21, 1, 0, 1, 0, 1, 0, 1, 1, 4, 1, 49, 
		    8, 1, 11, 1, 12, 1, 50, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 1, 2, 
		    1, 2, 1, 2, 1, 2, 3, 2, 63, 8, 2, 1, 3, 1, 3, 5, 3, 67, 8, 3, 10, 
		    3, 12, 3, 70, 9, 3, 1, 3, 1, 3, 1, 4, 1, 4, 1, 4, 1, 4, 1, 4, 1, 4, 
		    5, 4, 80, 8, 4, 10, 4, 12, 4, 83, 9, 4, 1, 5, 1, 5, 1, 5, 1, 5, 1, 
		    5, 1, 5, 5, 5, 91, 8, 5, 10, 5, 12, 5, 94, 9, 5, 1, 6, 1, 6, 1, 6, 
		    1, 6, 1, 6, 1, 6, 1, 6, 1, 6, 1, 6, 1, 6, 1, 6, 1, 6, 1, 6, 1, 6, 
		    1, 6, 1, 6, 3, 6, 112, 8, 6, 1, 7, 1, 7, 1, 7, 1, 7, 1, 8, 1, 8, 1, 
		    8, 1, 8, 1, 9, 1, 9, 1, 9, 1, 10, 1, 10, 1, 10, 1, 10, 1, 10, 1, 10, 
		    3, 10, 131, 8, 10, 3, 10, 133, 8, 10, 1, 11, 1, 11, 1, 11, 1, 11, 
		    1, 11, 1, 12, 1, 12, 1, 12, 1, 12, 5, 12, 144, 8, 12, 10, 12, 12, 
		    12, 147, 9, 12, 1, 12, 3, 12, 150, 8, 12, 1, 12, 1, 12, 1, 13, 1, 
		    13, 1, 13, 1, 13, 5, 13, 158, 8, 13, 10, 13, 12, 13, 161, 9, 13, 1, 
		    14, 1, 14, 1, 14, 5, 14, 166, 8, 14, 10, 14, 12, 14, 169, 9, 14, 1, 
		    15, 1, 15, 1, 15, 1, 15, 3, 15, 175, 8, 15, 1, 16, 1, 16, 1, 16, 3, 
		    16, 180, 8, 16, 1, 17, 1, 17, 1, 17, 1, 17, 1, 17, 1, 17, 1, 17, 1, 
		    17, 1, 17, 1, 17, 1, 17, 1, 17, 1, 17, 1, 17, 3, 17, 196, 8, 17, 1, 
		    18, 1, 18, 1, 19, 1, 19, 1, 20, 1, 20, 1, 20, 1, 20, 1, 20, 1, 20, 
		    1, 20, 1, 20, 1, 20, 1, 20, 1, 20, 1, 20, 1, 20, 1, 20, 3, 20, 216, 
		    8, 20, 1, 20, 1, 20, 1, 20, 1, 20, 1, 20, 1, 20, 1, 20, 1, 20, 1, 
		    20, 1, 20, 1, 20, 1, 20, 1, 20, 1, 20, 1, 20, 5, 20, 233, 8, 20, 10, 
		    20, 12, 20, 236, 9, 20, 1, 21, 1, 21, 1, 21, 0, 3, 8, 10, 40, 22, 
		    0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 
		    36, 38, 40, 42, 0, 6, 1, 0, 33, 36, 1, 0, 31, 32, 1, 0, 10, 12, 2, 
		    0, 8, 8, 13, 13, 1, 0, 19, 24, 1, 0, 14, 18, 257, 0, 44, 1, 0, 0, 
		    0, 2, 48, 1, 0, 0, 0, 4, 62, 1, 0, 0, 0, 6, 64, 1, 0, 0, 0, 8, 73, 
		    1, 0, 0, 0, 10, 84, 1, 0, 0, 0, 12, 111, 1, 0, 0, 0, 14, 113, 1, 0, 
		    0, 0, 16, 117, 1, 0, 0, 0, 18, 121, 1, 0, 0, 0, 20, 124, 1, 0, 0, 
		    0, 22, 134, 1, 0, 0, 0, 24, 139, 1, 0, 0, 0, 26, 153, 1, 0, 0, 0, 
		    28, 162, 1, 0, 0, 0, 30, 174, 1, 0, 0, 0, 32, 179, 1, 0, 0, 0, 34, 
		    195, 1, 0, 0, 0, 36, 197, 1, 0, 0, 0, 38, 199, 1, 0, 0, 0, 40, 215, 
		    1, 0, 0, 0, 42, 237, 1, 0, 0, 0, 44, 45, 3, 2, 1, 0, 45, 46, 5, 0, 
		    0, 1, 46, 1, 1, 0, 0, 0, 47, 49, 3, 4, 2, 0, 48, 47, 1, 0, 0, 0, 49, 
		    50, 1, 0, 0, 0, 50, 48, 1, 0, 0, 0, 50, 51, 1, 0, 0, 0, 51, 3, 1, 
		    0, 0, 0, 52, 63, 3, 12, 6, 0, 53, 63, 3, 14, 7, 0, 54, 63, 3, 16, 
		    8, 0, 55, 63, 3, 18, 9, 0, 56, 63, 3, 20, 10, 0, 57, 63, 3, 24, 12, 
		    0, 58, 63, 3, 22, 11, 0, 59, 63, 3, 34, 17, 0, 60, 63, 3, 36, 18, 
		    0, 61, 63, 3, 38, 19, 0, 62, 52, 1, 0, 0, 0, 62, 53, 1, 0, 0, 0, 62, 
		    54, 1, 0, 0, 0, 62, 55, 1, 0, 0, 0, 62, 56, 1, 0, 0, 0, 62, 57, 1, 
		    0, 0, 0, 62, 58, 1, 0, 0, 0, 62, 59, 1, 0, 0, 0, 62, 60, 1, 0, 0, 
		    0, 62, 61, 1, 0, 0, 0, 63, 5, 1, 0, 0, 0, 64, 68, 5, 1, 0, 0, 65, 
		    67, 3, 4, 2, 0, 66, 65, 1, 0, 0, 0, 67, 70, 1, 0, 0, 0, 68, 66, 1, 
		    0, 0, 0, 68, 69, 1, 0, 0, 0, 69, 71, 1, 0, 0, 0, 70, 68, 1, 0, 0, 
		    0, 71, 72, 5, 2, 0, 0, 72, 7, 1, 0, 0, 0, 73, 74, 6, 4, -1, 0, 74, 
		    75, 5, 56, 0, 0, 75, 81, 1, 0, 0, 0, 76, 77, 10, 1, 0, 0, 77, 78, 
		    5, 3, 0, 0, 78, 80, 5, 56, 0, 0, 79, 76, 1, 0, 0, 0, 80, 83, 1, 0, 
		    0, 0, 81, 79, 1, 0, 0, 0, 81, 82, 1, 0, 0, 0, 82, 9, 1, 0, 0, 0, 83, 
		    81, 1, 0, 0, 0, 84, 85, 6, 5, -1, 0, 85, 86, 3, 40, 20, 0, 86, 92, 
		    1, 0, 0, 0, 87, 88, 10, 1, 0, 0, 88, 89, 5, 3, 0, 0, 89, 91, 3, 40, 
		    20, 0, 90, 87, 1, 0, 0, 0, 91, 94, 1, 0, 0, 0, 92, 90, 1, 0, 0, 0, 
		    92, 93, 1, 0, 0, 0, 93, 11, 1, 0, 0, 0, 94, 92, 1, 0, 0, 0, 95, 96, 
		    5, 27, 0, 0, 96, 97, 3, 8, 4, 0, 97, 98, 3, 42, 21, 0, 98, 112, 1, 
		    0, 0, 0, 99, 100, 5, 27, 0, 0, 100, 101, 3, 8, 4, 0, 101, 102, 3, 
		    42, 21, 0, 102, 103, 5, 29, 0, 0, 103, 104, 3, 10, 5, 0, 104, 112, 
		    1, 0, 0, 0, 105, 106, 5, 28, 0, 0, 106, 107, 3, 8, 4, 0, 107, 108, 
		    3, 42, 21, 0, 108, 109, 5, 29, 0, 0, 109, 110, 3, 10, 5, 0, 110, 112, 
		    1, 0, 0, 0, 111, 95, 1, 0, 0, 0, 111, 99, 1, 0, 0, 0, 111, 105, 1, 
		    0, 0, 0, 112, 13, 1, 0, 0, 0, 113, 114, 3, 8, 4, 0, 114, 115, 5, 29, 
		    0, 0, 115, 116, 3, 10, 5, 0, 116, 15, 1, 0, 0, 0, 117, 118, 5, 56, 
		    0, 0, 118, 119, 7, 0, 0, 0, 119, 120, 3, 40, 20, 0, 120, 17, 1, 0, 
		    0, 0, 121, 122, 5, 56, 0, 0, 122, 123, 7, 1, 0, 0, 123, 19, 1, 0, 
		    0, 0, 124, 125, 5, 44, 0, 0, 125, 126, 3, 40, 20, 0, 126, 132, 3, 
		    6, 3, 0, 127, 130, 5, 45, 0, 0, 128, 131, 3, 6, 3, 0, 129, 131, 3, 
		    20, 10, 0, 130, 128, 1, 0, 0, 0, 130, 129, 1, 0, 0, 0, 131, 133, 1, 
		    0, 0, 0, 132, 127, 1, 0, 0, 0, 132, 133, 1, 0, 0, 0, 133, 21, 1, 0, 
		    0, 0, 134, 135, 5, 39, 0, 0, 135, 136, 5, 4, 0, 0, 136, 137, 3, 10, 
		    5, 0, 137, 138, 5, 5, 0, 0, 138, 23, 1, 0, 0, 0, 139, 140, 5, 46, 
		    0, 0, 140, 141, 3, 40, 20, 0, 141, 145, 5, 1, 0, 0, 142, 144, 3, 26, 
		    13, 0, 143, 142, 1, 0, 0, 0, 144, 147, 1, 0, 0, 0, 145, 143, 1, 0, 
		    0, 0, 145, 146, 1, 0, 0, 0, 146, 149, 1, 0, 0, 0, 147, 145, 1, 0, 
		    0, 0, 148, 150, 3, 28, 14, 0, 149, 148, 1, 0, 0, 0, 149, 150, 1, 0, 
		    0, 0, 150, 151, 1, 0, 0, 0, 151, 152, 5, 2, 0, 0, 152, 25, 1, 0, 0, 
		    0, 153, 154, 5, 47, 0, 0, 154, 155, 3, 10, 5, 0, 155, 159, 5, 6, 0, 
		    0, 156, 158, 3, 4, 2, 0, 157, 156, 1, 0, 0, 0, 158, 161, 1, 0, 0, 
		    0, 159, 157, 1, 0, 0, 0, 159, 160, 1, 0, 0, 0, 160, 27, 1, 0, 0, 0, 
		    161, 159, 1, 0, 0, 0, 162, 163, 5, 48, 0, 0, 163, 167, 5, 6, 0, 0, 
		    164, 166, 3, 4, 2, 0, 165, 164, 1, 0, 0, 0, 166, 169, 1, 0, 0, 0, 
		    167, 165, 1, 0, 0, 0, 167, 168, 1, 0, 0, 0, 168, 29, 1, 0, 0, 0, 169, 
		    167, 1, 0, 0, 0, 170, 175, 3, 12, 6, 0, 171, 175, 3, 14, 7, 0, 172, 
		    175, 3, 16, 8, 0, 173, 175, 3, 18, 9, 0, 174, 170, 1, 0, 0, 0, 174, 
		    171, 1, 0, 0, 0, 174, 172, 1, 0, 0, 0, 174, 173, 1, 0, 0, 0, 175, 
		    31, 1, 0, 0, 0, 176, 180, 3, 14, 7, 0, 177, 180, 3, 16, 8, 0, 178, 
		    180, 3, 18, 9, 0, 179, 176, 1, 0, 0, 0, 179, 177, 1, 0, 0, 0, 179, 
		    178, 1, 0, 0, 0, 180, 33, 1, 0, 0, 0, 181, 182, 5, 49, 0, 0, 182, 
		    196, 3, 6, 3, 0, 183, 184, 5, 49, 0, 0, 184, 185, 3, 40, 20, 0, 185, 
		    186, 3, 6, 3, 0, 186, 196, 1, 0, 0, 0, 187, 188, 5, 49, 0, 0, 188, 
		    189, 3, 30, 15, 0, 189, 190, 5, 7, 0, 0, 190, 191, 3, 40, 20, 0, 191, 
		    192, 5, 7, 0, 0, 192, 193, 3, 32, 16, 0, 193, 194, 3, 6, 3, 0, 194, 
		    196, 1, 0, 0, 0, 195, 181, 1, 0, 0, 0, 195, 183, 1, 0, 0, 0, 195, 
		    187, 1, 0, 0, 0, 196, 35, 1, 0, 0, 0, 197, 198, 5, 50, 0, 0, 198, 
		    37, 1, 0, 0, 0, 199, 200, 5, 51, 0, 0, 200, 39, 1, 0, 0, 0, 201, 202, 
		    6, 20, -1, 0, 202, 203, 5, 8, 0, 0, 203, 216, 3, 40, 20, 13, 204, 
		    205, 5, 9, 0, 0, 205, 216, 3, 40, 20, 12, 206, 207, 5, 4, 0, 0, 207, 
		    208, 3, 40, 20, 0, 208, 209, 5, 5, 0, 0, 209, 216, 1, 0, 0, 0, 210, 
		    216, 5, 57, 0, 0, 211, 216, 5, 58, 0, 0, 212, 216, 5, 53, 0, 0, 213, 
		    216, 5, 54, 0, 0, 214, 216, 5, 56, 0, 0, 215, 201, 1, 0, 0, 0, 215, 
		    204, 1, 0, 0, 0, 215, 206, 1, 0, 0, 0, 215, 210, 1, 0, 0, 0, 215, 
		    211, 1, 0, 0, 0, 215, 212, 1, 0, 0, 0, 215, 213, 1, 0, 0, 0, 215, 
		    214, 1, 0, 0, 0, 216, 234, 1, 0, 0, 0, 217, 218, 10, 10, 0, 0, 218, 
		    219, 7, 2, 0, 0, 219, 233, 3, 40, 20, 11, 220, 221, 10, 9, 0, 0, 221, 
		    222, 7, 3, 0, 0, 222, 233, 3, 40, 20, 10, 223, 224, 10, 8, 0, 0, 224, 
		    225, 7, 4, 0, 0, 225, 233, 3, 40, 20, 9, 226, 227, 10, 7, 0, 0, 227, 
		    228, 5, 25, 0, 0, 228, 233, 3, 40, 20, 8, 229, 230, 10, 6, 0, 0, 230, 
		    231, 5, 26, 0, 0, 231, 233, 3, 40, 20, 7, 232, 217, 1, 0, 0, 0, 232, 
		    220, 1, 0, 0, 0, 232, 223, 1, 0, 0, 0, 232, 226, 1, 0, 0, 0, 232, 
		    229, 1, 0, 0, 0, 233, 236, 1, 0, 0, 0, 234, 232, 1, 0, 0, 0, 234, 
		    235, 1, 0, 0, 0, 235, 41, 1, 0, 0, 0, 236, 234, 1, 0, 0, 0, 237, 238, 
		    7, 5, 0, 0, 238, 43, 1, 0, 0, 0, 18, 50, 62, 68, 81, 92, 111, 130, 
		    132, 145, 149, 159, 167, 174, 179, 195, 215, 232, 234];
		protected static $atn;
		protected static $decisionToDFA;
		protected static $sharedContextCache;

		public function __construct(TokenStream $input)
		{
			parent::__construct($input);

			self::initialize();

			$this->interp = new ParserATNSimulator($this, self::$atn, self::$decisionToDFA, self::$sharedContextCache);
		}

		private static function initialize(): void
		{
			if (self::$atn !== null) {
				return;
			}

			RuntimeMetaData::checkVersion('4.13.1', RuntimeMetaData::VERSION);

			$atn = (new ATNDeserializer())->deserialize(self::SERIALIZED_ATN);

			$decisionToDFA = [];
			for ($i = 0, $count = $atn->getNumberOfDecisions(); $i < $count; $i++) {
				$decisionToDFA[] = new DFA($atn->getDecisionState($i), $i);
			}

			self::$atn = $atn;
			self::$decisionToDFA = $decisionToDFA;
			self::$sharedContextCache = new PredictionContextCache();
		}

		public function getGrammarFileName(): string
		{
			return "Golampi.g4";
		}

		public function getRuleNames(): array
		{
			return self::RULE_NAMES;
		}

		public function getSerializedATN(): array
		{
			return self::SERIALIZED_ATN;
		}

		public function getATN(): ATN
		{
			return self::$atn;
		}

		public function getVocabulary(): Vocabulary
        {
            static $vocabulary;

			return $vocabulary = $vocabulary ?? new VocabularyImpl(self::LITERAL_NAMES, self::SYMBOLIC_NAMES);
        }

		/**
		 * @throws RecognitionException
		 */
		public function inicio(): Context\InicioContext
		{
		    $localContext = new Context\InicioContext($this->ctx, $this->getState());

		    $this->enterRule($localContext, 0, self::RULE_inicio);

		    try {
		        $this->enterOuterAlt($localContext, 1);
		        $this->setState(44);
		        $this->instrucciones();
		        $this->setState(45);
		        $this->match(self::EOF);
		    } catch (RecognitionException $exception) {
		        $localContext->exception = $exception;
		        $this->errorHandler->reportError($this, $exception);
		        $this->errorHandler->recover($this, $exception);
		    } finally {
		        $this->exitRule();
		    }

		    return $localContext;
		}

		/**
		 * @throws RecognitionException
		 */
		public function instrucciones(): Context\InstruccionesContext
		{
		    $localContext = new Context\InstruccionesContext($this->ctx, $this->getState());

		    $this->enterRule($localContext, 2, self::RULE_instrucciones);

		    try {
		        $this->enterOuterAlt($localContext, 1);
		        $this->setState(48); 
		        $this->errorHandler->sync($this);

		        $_la = $this->input->LA(1);
		        do {
		        	$this->setState(47);
		        	$this->instruccion();
		        	$this->setState(50); 
		        	$this->errorHandler->sync($this);
		        	$_la = $this->input->LA(1);
		        } while (((($_la) & ~0x3f) === 0 && ((1 << $_la) & 76086754800566272) !== 0));
		    } catch (RecognitionException $exception) {
		        $localContext->exception = $exception;
		        $this->errorHandler->reportError($this, $exception);
		        $this->errorHandler->recover($this, $exception);
		    } finally {
		        $this->exitRule();
		    }

		    return $localContext;
		}

		/**
		 * @throws RecognitionException
		 */
		public function instruccion(): Context\InstruccionContext
		{
		    $localContext = new Context\InstruccionContext($this->ctx, $this->getState());

		    $this->enterRule($localContext, 4, self::RULE_instruccion);

		    try {
		        $this->setState(62);
		        $this->errorHandler->sync($this);

		        switch ($this->getInterpreter()->adaptivePredict($this->input, 1, $this->ctx)) {
		        	case 1:
		        	    $this->enterOuterAlt($localContext, 1);
		        	    $this->setState(52);
		        	    $this->declaracion();
		        	break;

		        	case 2:
		        	    $this->enterOuterAlt($localContext, 2);
		        	    $this->setState(53);
		        	    $this->asignacion();
		        	break;

		        	case 3:
		        	    $this->enterOuterAlt($localContext, 3);
		        	    $this->setState(54);
		        	    $this->asig_compuesta();
		        	break;

		        	case 4:
		        	    $this->enterOuterAlt($localContext, 4);
		        	    $this->setState(55);
		        	    $this->inc_dec();
		        	break;

		        	case 5:
		        	    $this->enterOuterAlt($localContext, 5);
		        	    $this->setState(56);
		        	    $this->si_stmt();
		        	break;

		        	case 6:
		        	    $this->enterOuterAlt($localContext, 6);
		        	    $this->setState(57);
		        	    $this->switch();
		        	break;

		        	case 7:
		        	    $this->enterOuterAlt($localContext, 7);
		        	    $this->setState(58);
		        	    $this->imprimir();
		        	break;

		        	case 8:
		        	    $this->enterOuterAlt($localContext, 8);
		        	    $this->setState(59);
		        	    $this->for();
		        	break;

		        	case 9:
		        	    $this->enterOuterAlt($localContext, 9);
		        	    $this->setState(60);
		        	    $this->break();
		        	break;

		        	case 10:
		        	    $this->enterOuterAlt($localContext, 10);
		        	    $this->setState(61);
		        	    $this->continue();
		        	break;
		        }
		    } catch (RecognitionException $exception) {
		        $localContext->exception = $exception;
		        $this->errorHandler->reportError($this, $exception);
		        $this->errorHandler->recover($this, $exception);
		    } finally {
		        $this->exitRule();
		    }

		    return $localContext;
		}

		/**
		 * @throws RecognitionException
		 */
		public function bloque(): Context\BloqueContext
		{
		    $localContext = new Context\BloqueContext($this->ctx, $this->getState());

		    $this->enterRule($localContext, 6, self::RULE_bloque);

		    try {
		        $this->enterOuterAlt($localContext, 1);
		        $this->setState(64);
		        $this->match(self::T__0);
		        $this->setState(68);
		        $this->errorHandler->sync($this);

		        $_la = $this->input->LA(1);
		        while (((($_la) & ~0x3f) === 0 && ((1 << $_la) & 76086754800566272) !== 0)) {
		        	$this->setState(65);
		        	$this->instruccion();
		        	$this->setState(70);
		        	$this->errorHandler->sync($this);
		        	$_la = $this->input->LA(1);
		        }
		        $this->setState(71);
		        $this->match(self::T__1);
		    } catch (RecognitionException $exception) {
		        $localContext->exception = $exception;
		        $this->errorHandler->reportError($this, $exception);
		        $this->errorHandler->recover($this, $exception);
		    } finally {
		        $this->exitRule();
		    }

		    return $localContext;
		}

		/**
		 * @throws RecognitionException
		 */
		public function listids(): Context\ListidsContext
		{
			return $this->recursiveListids(0);
		}

		/**
		 * @throws RecognitionException
		 */
		private function recursiveListids(int $precedence): Context\ListidsContext
		{
			$parentContext = $this->ctx;
			$parentState = $this->getState();
			$localContext = new Context\ListidsContext($this->ctx, $parentState);
			$previousContext = $localContext;
			$startState = 8;
			$this->enterRecursionRule($localContext, 8, self::RULE_listids, $precedence);

			try {
				$this->enterOuterAlt($localContext, 1);
				$this->setState(74);
				$this->match(self::IDNAME);
				$this->ctx->stop = $this->input->LT(-1);
				$this->setState(81);
				$this->errorHandler->sync($this);

				$alt = $this->getInterpreter()->adaptivePredict($this->input, 3, $this->ctx);

				while ($alt !== 2 && $alt !== ATN::INVALID_ALT_NUMBER) {
					if ($alt === 1) {
						if ($this->getParseListeners() !== null) {
						    $this->triggerExitRuleEvent();
						}

						$previousContext = $localContext;
						$localContext = new Context\ListidsContext($parentContext, $parentState);
						$this->pushNewRecursionContext($localContext, $startState, self::RULE_listids);
						$this->setState(76);

						if (!($this->precpred($this->ctx, 1))) {
						    throw new FailedPredicateException($this, "\\\$this->precpred(\\\$this->ctx, 1)");
						}
						$this->setState(77);
						$this->match(self::T__2);
						$this->setState(78);
						$this->match(self::IDNAME); 
					}

					$this->setState(83);
					$this->errorHandler->sync($this);

					$alt = $this->getInterpreter()->adaptivePredict($this->input, 3, $this->ctx);
				}
			} catch (RecognitionException $exception) {
				$localContext->exception = $exception;
				$this->errorHandler->reportError($this, $exception);
				$this->errorHandler->recover($this, $exception);
			} finally {
				$this->unrollRecursionContexts($parentContext);
			}

			return $localContext;
		}

		/**
		 * @throws RecognitionException
		 */
		public function listaexp(): Context\ListaexpContext
		{
			return $this->recursiveListaexp(0);
		}
